# coding

./: .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  README.md  eslint.config.js  init.py  package.json  pyproject.toml  requirements.txt  run.py  tsconfig.json
array/contains_duplicate/: contains_duplicate.py
arrays/3Sum/: 3Sum.py  3Sum.ts
arrays/concat/: concat.py  concat.ts
arrays/contains_duplicate/: contains_duplicate.py  contains_duplicate.ts
arrays/encoder/: encoder.py  encoder.ts
arrays/group_anagrams/: group_anagrams.py  group_anagrams.ts
arrays/k_frequent/: k_frequent.py  k_frequent.ts
arrays/kth_smallest/: kth_smallest.py  kth_smallest.ts
arrays/longest_consecutive_sequence/: longest_consecutive_sequence.py  longest_consecutive_sequence.ts
arrays/max_water/: max_water.py  max_water.ts
arrays/maximise_difference/: maximise_difference.py  maximise_difference.ts
arrays/merge_sorted_arrays/: merge_sorted_arrays.py  merge_sorted_arrays.ts
arrays/product_except_self/: product_except_self.py  product_except_self.ts
arrays/remove_duplicae_element/: remove_duplicae_element.py  remove_duplicae_element.ts
arrays/remove_element/: remove_element.py  remove_element.ts
arrays/rotate/: rotate.py  rotate.ts
arrays/two_sums/: two_sums.py  two_sums.ts
arrays/valid_intervals/: valid_intervals.py  valid_intervals.ts
bits/hamming_weight/: hamming_weight.py  hamming_weight.ts
dynamic_programming/distinct_arrays/: distinct_arrays.py  distinct_arrays.ts
dynamic_programming/sum_of_no_adjacent_element/: sum_of_no_adjacent_element.py  sum_of_no_adjacent_element.ts
linked_list/palidrome/: palidrome.py
linked_list/reorder/: reorder.py
utils/: generator.py  linked_list.py  purger.py
(+63 files in other folders)
